Fix JDK11 build issue
Due to using a JDK17 function